--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,9 @@ kitId=0
 platform = espressif32
 framework = arduino
 board = esp32dev
+upload_protocol = esp-prog
+debug_tool = esp-prog
+debug_init_break = tbreak setup
 build_src_filter = +<esp1.cpp>                               ; Especifica que o arquivo "uno1.cpp" deve ser incluído no processo de compilação
 lib_deps = josuemorais/iikitmini_lib@^0.1.8
+build_flags = -g -Og -DCORE_DEBUG_LEVEL=5
